--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,22 @@ version = "0.1.0"
 authors = ["obscurity <z@x4.pm>"]
 edition = "2021"
 
+[profile.release]
+strip = true
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+
 [dependencies]
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
 kankyo = "0.3"
 poise = "0.3"
 paris = { version = "1.5", features = ["timestamps", "macros"] }
 color-eyre = "0.6"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+lazy_static = "1.4"
 
 [dependencies.serenity]
 default-features = false
