--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ color-eyre = "0.6"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 lazy_static = "1.4"
+rchan = "0.3"
+rand = "0.8"
+chrono = "0.4"
+chrono-tz = "0.6"
 
 [dependencies.serenity]
 default-features = false
