--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - "**.rs"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,6 +24,7 @@ jobs:
 
       - name: compile and build
         uses: rust-build/rust-build.action@v1.3.2
+        id: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -32,10 +34,10 @@ jobs:
           UPLOAD_MODE: none
           MINIFY: true
 
-      - name: Upload artifact
+      - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: Binary
           path: |
-            ${{ steps.compile.outputs.BUILT_ARCHIVE }}
-            ${{ steps.compile.outputs.BUILT_CHECKSUM }}
+            ${{ steps.build.outputs.BUILT_ARCHIVE }}
+            ${{ steps.build.outputs.BUILT_CHECKSUM }}
