--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,23 @@ version = "0.1.0"
 authors = ["obscurity <z@x4.pm>"]
 edition = "2021"
 
-[profile.release]
-strip = true
-opt-level = 3
-lto = true
-codegen-units = 1
-panic = "abort"
-
 [dependencies]
+serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "cache"], default-features = false }
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
 kankyo = "0.3"
 poise = "0.3"
 paris = { version = "1.5", features = ["timestamps", "macros"] }
 color-eyre = "0.6"
-toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+toml = "0.5"
 lazy_static = "1.4"
 rchan = "0.3"
-rand = "0.8"
+nanorand = "0.7"
 chrono = "0.4"
 chrono-tz = "0.6"
 
-[dependencies.serenity]
-default-features = false
-features = ["client", "gateway", "rustls_backend", "model", "cache"]
-version = "0.11"
+[profile.release]
+lto = true
+strip = true
+codegen-units = 1
