--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 
 [dependencies]
 serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "cache"], default-features = false }
+poise = "0.3"
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
 kankyo = "0.3"
-poise = "0.3"
 paris = { version = "1.5", features = ["timestamps", "macros"] }
-color-eyre = "0.6"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 toml = "0.5"
 lazy_static = "1.4"
+reqwest = { version = "0.11", features = ["json"]}
 rchan = "0.3"
 nanorand = "0.7"
 chrono = "0.4"
