--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "wisp"
-version = "0.1.0"
-authors = ["obscurity <z@x4.pm>"]
+version = "0.2.0"
+authors = ["fawn <fawn@envs.net>"]
 edition = "2021"
+repository = "https://github.com/fawni/wisp"
+license = "ISC"
 
 [dependencies]
 serenity = { version = "0.11", features = [
@@ -37,4 +39,3 @@ codegen-units = 1
 inherits = "release"
 debug = true
 split-debuginfo = "packed"
-
