--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,9 @@ serenity = { version = "0.11", features = [
 poise = "0.5"
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
 
-kankyo = "0.3"
 paris = { version = "1.5", features = ["timestamps", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.7"
+dotenvy = "0.15.7"
 
 chrono = "0.4.23"
 chrono-tz = "0.8"
@@ -32,8 +31,3 @@ system_shutdown = "4.0"
 [profile.release]
 lto = true
 codegen-units = 1
-
-[profile.dist]
-inherits = "release"
-debug = true
-split-debuginfo = "packed"
