--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ reqwest = { version = "0.11.15", features = ["json"] }
 
 chrono = "0.4.23"
 chrono-tz = "0.8.1"
-lazy_static = "1.4.0"
 nanorand = "0.7.0"
 regex = "1.7.2"
+thiserror = "1.0.40"
 
 [dependencies.serenity]
 version = "0.11.5"
