--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,10 +1,9 @@
 name: Fly Deploy
 on:
   push:
-    branches:
-      - master
     paths:
       - "**.rs"
+      - "fly.toml"
 jobs:
   deploy:
     name: Deploy wisp
