--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,27 @@
 [package]
 name = "wisp"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["fawn <fawn@envs.net>"]
 edition = "2021"
 repository = "https://github.com/fawni/wisp"
 license = "ISC"
 
 [dependencies]
-poise = "0.5.2"
-tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
+poise = "0.5.5"
+tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
 
-paris = { version = "1.5.13", features = ["timestamps", "macros"] }
-serde = { version = "1.0.158", features = ["derive"] }
+paris = { version = "1.5.15", features = ["timestamps", "macros"] }
+serde = { version = "1.0.162", features = ["derive"] }
 dotenvy = "0.15.7"
-reqwest = { version = "0.11.15", features = ["json"] }
+reqwest = { version = "0.11.17", features = ["json"] }
 
-chrono = "0.4.23"
-chrono-tz = "0.8.1"
+chrono = "0.4.24"
+chrono-tz = "0.8.2"
 nanorand = "0.7.0"
-regex = "1.7.2"
+regex = "1.8.1"
 thiserror = "1.0.40"
+system_shutdown = "4.0.1"
+futures = "0.3.28"
 
 [dependencies.serenity]
 version = "0.11.5"
