--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,22 @@ license = "ISC"
 
 [dependencies]
 poise = "0.5.5"
-tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
 
-serde = { version = "1.0.162", features = ["derive"] }
+serde = { version = "1.0.163", features = ["derive"] }
 paris = { version = "1.5.15", features = ["timestamps", "macros"] }
 dotenvy = "0.15.7"
 thiserror = "1.0.40"
 
-reqwest = { version = "0.11.17", features = ["json"] }
+reqwest = { version = "0.11.18", features = ["json"] }
 nanorand = "0.7.0"
-regex = "1.8.1"
+regex = "1.8.2"
 
 chrono = "0.4.24"
 chrono-tz = "0.8.2"
 
 system_shutdown = "4.0.1"
+once_cell = "1.17.1"
 
 [profile.release]
 lto = true
