--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,22 +8,22 @@ license = "ISC"
 
 [dependencies]
 poise = "0.5.5"
-tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
 
-serde = { version = "1.0.163", features = ["derive"] }
-paris = { version = "1.5.15", features = ["timestamps", "macros"] }
+serde = { version = "1.0.183", features = ["derive"] }
+twink = { version = "1.0.0", features = ["12-hour"] }
 dotenvy = "0.15.7"
-thiserror = "1.0.40"
+thiserror = "1.0.44"
 
 reqwest = { version = "0.11.18", features = ["json"] }
 nanorand = "0.7.0"
-regex = "1.8.2"
+regex = "1.9.3"
 
-chrono = "0.4.24"
-chrono-tz = "0.8.2"
+chrono = "0.4.26"
+chrono-tz = "0.8.3"
 
 system_shutdown = "4.0.1"
-once_cell = "1.17.1"
+once_cell = "1.18.0"
 
 [profile.release]
 lto = true
