--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
     environment:
       WISP_PREFIX: "~"
       WISP_TOKEN: ""
+      WISP_COLOR: "8AB484" # a hex string without the '#'
       
