--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,22 @@ license = "ISC"
 
 [dependencies]
 poise = "0.6.1"
-tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
 
-serde = { version = "1.0.215", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 twink = { version = "1.1.3", features = ["12-hour"] }
 dotenvy = "0.15.7"
-thiserror = "2.0.3"
-once_cell = "1.20.2"
+thiserror = "2.0.12"
+once_cell = "1.21.3"
 
-reqwest = { version = "0.12.9", features = ["json"] }
-nanorand = "0.7.0"
+reqwest = { version = "0.12.20", features = ["json"] }
+nanorand = "0.8.0"
 regex = "1.11.1"
-faye = { version = "0.6.1", default-features = false }
+faye = { version = "0.6.2", default-features = false }
 
-chrono = "0.4.38"
-chrono-tz = "0.10.0"
+chrono = "0.4.41"
+chrono-tz = "0.10.3"
+urlencoding = "2.1.3"
 
 [profile.release]
 lto = true
