--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ faye = { version = "0.6.2", default-features = false }
 chrono = "0.4.41"
 chrono-tz = "0.10.3"
 urlencoding = "2.1.3"
+base64 = "0.22.1"
+serde_json = "1.0.140"
 
 [profile.release]
 lto = true
